find_package(Latex REQUIRED PdfLatex)

set( OPENGE_DOC_SOURCES openge_commands.tex openge_dev_guide.tex)

add_custom_target(docs SOURCES ${OPENGE_DOC_SOURCES})

FOREACH(TEX_FILE ${OPENGE_DOC_SOURCES})
  add_custom_command(TARGET docs COMMAND ${PDFLATEX_COMPILER} ${CMAKE_CURRENT_SOURCE_DIR}/${TEX_FILE} -o ${CMAKE_CURRENT_SOURCE_DIR}/${TEX_FILE}.pdf )
ENDFOREACH(TEX_FILE)

#add_custom_command(OUTPUT ${LATEX_PDF_FILE} COMMAND ${PDFLATEX_COMPILER} ${TEX_FILE} -o ${LATEX_PDF_FILE} MAIN_DEPENDENCY "${TEX_FILE}" COMMENT "LATEXing ${TEX_FILE}")

